--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore node_modules directory
 api/node_modules/
 node_modules/
+frontend/node_modules/
 
 # Ignore environment variables
 api/.env
